# release-sanity-checker

./: .gitignore  Cargo.toml  Containerfile  Containerfile-rust  README.md  config.ini  main.py  useful_commands.txt
.github/workflows/: rust-release-cross.yml  rust-release-windows.yml  rust-release.yml  rust.yml
examples/: example-get.json  example-post.json
go/: README.md  config.go  db.go  diff.go  fetch.go  go.mod  go.sum  main.go  printer.go
rust/: Cargo.toml
rust/src/: main.rs
rust/src/diff_finder/: mod.rs
src/: diff_finder.rs  diff_printer.rs  main.rs  print_actor.rs  printer.rs
src/diff_finder/: mod.rs  tests.rs
