[package]
name = "response_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }

[profile.release]
lto = true         # Enable Link-Time Optimization for better performance
codegen-units = 1  # Compile the crate in a single codegen unit for better optimization, but slower compilation
opt-level = 3      # Maximum optimization level for release builds
strip = true       # Strip symbols from the binary for smaller size (and slightly faster execution, negligible in most cases)
# panic = 'abort'    # Abort on panic for slightly smaller binary and potentially faster panic handling (less safe than 'unwind')

[profile.release.build-override] # Override for dependencies during release builds
opt-level = 3      # Apply same optimization level to dependencies as well